<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.help">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Como funciona o aplicativo?"
        android:gravity="center"
        android:textStyle="bold"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txtajuda"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/textoajuda"
        android:layout_gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/item1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/itemum"
        android:layout_gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/item2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/itemdois"
        android:layout_gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/item3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/itemtres"
        android:layout_gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/item4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/itemquatro"
        android:layout_gravity="center"
        android:textColor="#000000"
        />
        </LinearLayout>
    </ScrollView>
</LinearLayout>